test/reckon_bracketed_test.test
=== DERIVED EXPRESSION: line ##:
[< X 1 >]
^^^^^^^^^
    [< X 1 >]
!@@ := [< X 1 >]
=== BRACKETED EXPRESSION: line ##:
[< X 1 >]
^^^^^^^^^
    [< X 1 >]
!@@ := [< X 1 >]:
           .terminator = "<LF>"
           .position[H] = PACKED_VEC
           .initiator = [$ LOGICAL_LINE $]
=== PURELIST EXPRESSION: line ##:
    < X 1 >]
    ^^^^^
    {|< X 1|}
!@@ := "<" X 1:
           .position[H] = PACKED_VEC
ERROR: in line ##: missing operand; error operand inserted:
    < X 1 >]
            ^
=== BRACKETED EXPRESSION: lines ##-##:
[
^
    < X 1 >]
^^^^^^^^^^^^
    [{|< X 1|} > ERROR'OPERAND]
!@@ := @@ ">" ERROR'OPERAND:
           .terminator = "]"
           .initiator = "["
           .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: lines ##-##:
[
^
    < X 1 >]
^^^^^^^^^^^^
    [{|< X 1|} > ERROR'OPERAND]
!@@ := @@:
           .terminator = "<LF>"
           .position[H] = PACKED_VEC
           .initiator = [$ LOGICAL_LINE $]
=== PURELIST EXPRESSION: line ##:
(x + y)
 ^
    {|x|}
!@@ := x:
           .position[H] = PACKED_VEC
=== PURELIST EXPRESSION: line ##:
(x + y)
     ^
    {|y|}
!@@ := y:
           .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: line ##:
(x + y)
^^^^^^^
    ({|x|} + {|y|})
!@@ := @@ "+" @@:
           .terminator = ")"
           .initiator = "("
           .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: line ##:
(x + y)
^^^^^^^
    ({|x|} + {|y|})
!@@ := @@:
           .terminator = "<LF>"
           .position[H] = PACKED_VEC
           .initiator = [$ LOGICAL_LINE $]
=== PURELIST EXPRESSION: line ##:
{{x + y}}
  ^
    {|x|}
!@@@ := x:
            .position[H] = PACKED_VEC
=== PURELIST EXPRESSION: line ##:
{{x + y}}
      ^
    {|y|}
!@@@ := y:
            .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: line ##:
{{x + y}}
^^^^^^^^^
    {{{|x|} + {|y|}}}
!@@@ := @@@ "+" @@@:
            .terminator = [< "}" "}" >]
            .initiator = [< "{" "{" >]
            .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: line ##:
{{x + y}}
^^^^^^^^^
    {{{|x|} + {|y|}}}
!@@@ := @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
=== PURELIST EXPRESSION: lines ##-##:
{
^
    | X Y Z|
^^^^^^^^^^^^
    }
^^^^^
    {|X Y Z|}
!@@@ := X Y Z:
            .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: lines ##-##:
{
^
    | X Y Z|
^^^^^^^^^^^^
    }
^^^^^
    X Y Z
!@@@ := X Y Z:
            .terminator = "<LF>"
            .initiator = [$ LOGICAL_LINE $]
            .position[H] = PACKED_VEC
=== PURELIST EXPRESSION: line ##:
``This is text X + Y with insert [X + Y].''
                                  ^
    {|X|}
!@@@ := X:
            .position[H] = PACKED_VEC
=== PURELIST EXPRESSION: line ##:
``This is text X + Y with insert [X + Y].''
                                      ^
    {|Y|}
!@@@ := Y:
            .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: line ##:
``This is text X + Y with insert [X + Y].''
                                 ^^^^^^^
    [{|X|} + {|Y|}]
!@@@ := @@@ "+" @@@:
            .terminator = "]"
            .initiator = "["
            .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: line ##:
``This is text X + Y with insert [X + Y].''
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    {s: .terminator = "."|This is text X + Y with insert
        [{|X|} + {|Y|}]|s}
!@@@ := This is text X "+" Y with insert @@@:
            .terminator = "."
            .position[H] = PACKED_VEC
            .type = s
=== BRACKETED EXPRESSION: line ##:
``This is text X + Y with insert [X + Y].''
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ``{s: .terminator = "."|This is text X + Y with insert
          [{|X|} + {|Y|}]|s}''
!@@@ := @@@:
            .terminator = "''"
            .initiator = "``"
            .position[H] = PACKED_VEC
=== BRACKETED EXPRESSION: line ##:
``This is text X + Y with insert [X + Y].''
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ``{s: .terminator = "."|This is text X + Y with insert
          [{|X|} + {|Y|}]|s}''
!@@@ := @@@:
            .terminator = "<LF>"
            .position[H] = PACKED_VEC
            .initiator = [$ LOGICAL_LINE $]
